changed file name from Control.js to UserControl.js inside index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
  
 </head>
 <body onkeydown="return userControl(event);">
+     <script type="text/javascript" src="EngineCore/Core.js"></script>
+    <script type="text/javascript" src="EngineCore/UserControl.js">
+</script>
 <div>TODO write content</div>
     <table style="padding: 2px">
 <tr>
@@ -14,8 +17,6 @@
 </td>
 </tr>
 </table>
-    <script type="text/javascript" src="EngineCore/Core.js"></script>
-    <script type="text/javascript" src="EngineCore/Control.js">
-</script>
+   
 </body>
 </html>
