Modified the contents of .js files--> rendered correct output

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <html>
 <head>
 <title>First html file</title>
- 
-</head>
+ </head>
 <body onkeydown="return userControl(event);">
-     <script type="text/javascript" src="EngineCore/Core.js"></script>
-    <script type="text/javascript" src="EngineCore/UserControl.js">
-</script>
-<div>TODO write content</div>
-    <table style="padding: 2px">
+     
+<table style="padding:2px">
 <tr>
 <td>
 <div>
@@ -17,6 +13,7 @@
 </td>
 </tr>
 </table>
-   
+ <script type="text/javascript" src="EngineCore/Core.js"></script>
+ <script type="text/javascript" src="EngineCore/UserControl.js"></script>  
 </body>
 </html>
